[gd_scene load_steps=10 format=3 uid="uid://cwq3btl8dlhkw"]

[ext_resource type="Script" uid="uid://bcts80smijr14" path="res://content/props/radar/radar.gd" id="1_oo0n2"]
[ext_resource type="PackedScene" uid="uid://cjcnaed1tu6xa" path="res://content/props/radar/radar.glb" id="1_yi3on"]
[ext_resource type="Material" uid="uid://0ojaj4mkamg3" path="res://content/materials/screen_mat.tres" id="3_bad8r"]
[ext_resource type="Script" uid="uid://b5p4attr3nuyn" path="res://content/interactables/interaction.gd" id="4_k8y8q"]
[ext_resource type="FontFile" uid="uid://egyhs8md2q5l" path="res://gui/Aleo-Bold.ttf" id="4_sufeq"]
[ext_resource type="PackedScene" uid="uid://bywuygc0nn732" path="res://content/props/radar/radar_screen.tscn" id="5_bad8r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5egpa"]
size = Vector3(0.9609375, 0.62109375, 0.12890625)

[sub_resource type="BoxShape3D" id="BoxShape3D_k8y8q"]
size = Vector3(0.21972656, 0.18847656, 0.12890625)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sufeq"]
height = 4.0
radius = 0.7895508

[node name="Radar" type="Node3D"]
script = ExtResource("1_oo0n2")

[node name="radar" parent="." instance=ExtResource("1_yi3on")]

[node name="RadarScreen" parent="radar" index="2"]
material_override = ExtResource("3_bad8r")

[node name="RadarmastConsoleCap" parent="radar" index="4"]
transform = Transform3D(1, 0, 0, 0, 0.9999998, 0, 0, 0, 0.9999998, -0.053414524, 0.28108463, -0.48504966)

[node name="Radarmast_On" parent="radar" index="7"]
visible = false

[node name="RadarmastTop" parent="radar" index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.0551486, 0)

[node name="RadarmastTop2" parent="radar/RadarmastTop" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.24708366, 0)

[node name="Radarmast_On_2" parent="radar/RadarmastTop/RadarmastTop2" index="1"]
visible = false

[node name="Label3D" type="Label3D" parent="radar/RadarmastTop" index="1"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, 5.4986277, -0.5088016)
alpha_cut = 1
text = "Station 1"
font = ExtResource("4_sufeq")
outline_size = 0

[node name="DoorInteraction" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05085683, -0.011301503, -0.55512846)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_k8y8q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorInteraction"]
shape = SubResource("BoxShape3D_5egpa")

[node name="LeverInteraction" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.34227365, 0.09628451, -0.50589937)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_k8y8q")
block = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeverInteraction"]
shape = SubResource("BoxShape3D_k8y8q")

[node name="ScreenViewport" type="SubViewport" parent="."]
positional_shadow_atlas_size = 0
positional_shadow_atlas_16_bits = false
positional_shadow_atlas_quad_2 = 2
positional_shadow_atlas_quad_3 = 2
size = Vector2i(200, 150)
render_target_clear_mode = 2
render_target_update_mode = 0

[node name="RadarScreen" parent="ScreenViewport" instance=ExtResource("5_bad8r")]

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.4278969, 0)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("CylinderShape3D_sufeq")

[connection signal="highlight_stopped" from="DoorInteraction" to="." method="_on_door_highlight_stopped"]
[connection signal="highlights_started" from="DoorInteraction" to="." method="_on_door_highlights_started"]
[connection signal="interacted" from="DoorInteraction" to="." method="_on_door_interacted"]
[connection signal="highlight_stopped" from="LeverInteraction" to="." method="_on_lever_highlight_stopped"]
[connection signal="highlights_started" from="LeverInteraction" to="." method="_on_lever_highlights_started"]
[connection signal="interacted" from="LeverInteraction" to="." method="_on_lever_interacted"]

[editable path="radar"]
